--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,12 @@
     padding: 0;
     box-sizing: border-box;
     user-select: none;
+    font-size: 16pt;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
 #main {
-    font-size: 16pt;
-    font-family: Arial, Helvetica, sans-serif;
     display: block;
     text-align: center;
 }
@@ -30,9 +30,9 @@
     margin: 10px 0;
 }
 
-#main > .dataset > .buttons > .name {
+/* #main > .dataset > .buttons > .name {
     
-}
+} */
 
 a,
 a:visited {
